# transfer

./: .gitignore  AGENTS.md  CRYPTO-PROTOCOL.md  Cargo.toml  Dioxus.toml  LICENSE-PD  README.md  android-build.sh  android-install.sh  android-logcat-errors.sh  android-sign.sh  clean.cmd  clean.sh  desktop-build-linux.sh  desktop-build-macos.sh  desktop-build.cmd  desktop-install-linux.sh  desktop-run.sh
.github/workflows/: ci.yml
android/: AndroidManifest.xml  MainActivity.kt  proguard-jni.pro
android/res/drawable/: ic_launcher_background.xml
android/res/drawable-v24/: ic_launcher_foreground.xml
assets/: generate.sh  svg2vd.py
scripts/: lib.sh  makerelease.sh
src/: android_interface.rs  app.rs  crypto.rs  device_name.rs  fixedstr.rs  ip_support.rs  ipc.rs  keystore.rs  l10n.rs  main.rs  pick_file.rs  protocol.rs
src/app/: component_banner_sharedfile.rs  component_langselect.rs  component_metabox.rs  component_panel_devices.rs  component_panel_incoming.rs  component_panel_network.rs  component_panel_outgoing.rs  css.rs  style.css
src/protocol/: discovery.rs  packets.rs  transfer.rs  transfer_crypto.rs
