[package]
name = "transfer"
description = "File transfer tool"
license = "PD OR Apache-2.0"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1"
bytesize = "2"
dioxus = { version = "0.7", features = [ "desktop" ] }
dirs = "6"
env_logger = "0.11"
hostname = "0.4"
log = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha3 = "0.11"
socket2 = "0.6"
tokio = { version = "1", features = [ "rt", "net", "fs", "time", "io-util" ] }
uuid = { version = "1", features = [ "v4" ] }

[target.'cfg(not(target_os = "android"))'.dependencies]
clap = { version = "4", features = [ "derive" ] }
rfd = "0.17"
png = "0.18"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
ndk-context = "0.1"

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
