[package]
name = "transfer"
description = "File transfer tool"
license = "PD OR MIT OR Apache-2.0"
version = "2.0.0"
edition = "2024"
rust-version = "1.91"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1"
bytesize = "2"
crc-fast = "1"
dioxus = { version = "0.7", features = [ "desktop", "mobile" ] }
dirs = "6"
env_logger = "0.11"
hostname = "0.4"
if-addrs = "0.15"
log = "0.4"
rkyv = "0.8"
socket2 = "0.6"
tempfile = "3"
tokio = { version = "1", features = [ "rt-multi-thread", "net", "fs", "time", "io-util" ] }
uuid = { version = "1", features = [ "v4" ] }
zip = "8"

[target.'cfg(not(target_os = "android"))'.dependencies]
clap = { version = "4", features = [ "derive" ] }
console-subscriber = "0.5"
png = "0.18"
rfd = "0.17"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
jni = "0.22"
ndk-context = "0.1"

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
overflow-checks = true

[features]
default = [ "ipv4", "ipv6" ]
ipv4 = []
ipv6 = []
